[package]
name = "rust-wasm-vite-react-ts"
version = "0.1.0"
authors = ["mengen.dai <mengen.dai@outlook.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = [
    "web-sys/console",
    "console_error_panic_hook"
]

[dependencies]
js-sys = "0.3"
web-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
